--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Whilom</string>
+    <string name="app_name">T-T-B</string>
     <string name="greeting">Hello World!</string>
 </resources>
